# xenomai-libevl-fc39

./: README.md  meson-build-libevl.sh  meson.build
benchmarks/: hectic.c  latmus.c
include/: meson.build
include/evl/: clock.h  compat.h  event.h  evl.h  flags.h  heap.h  mutex.h  observable.h  poll.h  proxy.h  sched.h  sem.h  sys.h  syscall.h  thread.h  timer.h  xbuf.h
include/evl/net/: socket.h
lib/: clock.c  event.c  flags.c  init.c  internal.h  mutex.c  observable.c  poll.c  proxy.c  sched.c  sem.c  sys.c  syscall.c  thread.c  timer.c  version.c  xbuf.c
lib/arch/arm64/include/asm/evl/: vdso.h
lib/arch/x86/include/asm/evl/: vdso.h
meson/: setup-uapi.sh
tests/: fault.c  fpu-preload.c  fpu-stress.c  heap-torture.c  helpers.c  helpers.h  meson.build  monitor-deadlock.c  monitor-deboost-stress.c  monitor-event-targeted.c  monitor-event-untrack.c  monitor-event.c  monitor-flags-broadcast.c  monitor-flags-inband.c  monitor-flags.c  monitor-pi-deadlock.c  monitor-pi-deboost.c  monitor-pi-stress.c  monitor-pi.c  monitor-pp-lazy.c  monitor-pp-pi.c  monitor-recursive.c  monitor-trylock.c  monitor-wait-multiple.c  monitor-wait-requeue.c  observable-hm.c  observable-inband.c  observable-race.c  observable-unicast.c  poll-close.c  poll-flags.c  poll-many.c  poll-multiple.c  poll-observable-inband.c  poll-observable-oob.c  poll-sem.c  poll-xbuf.c  proxy-poll.c  rwlock-read.c  rwlock-write.c  (+8 more)
tests/compile-tests/: event.cc  flags.cc  mutex.cc  proxy.cc  sem.cc
tidbits/: oob-net-icmp.c  oob-spi.c
utils/: evl-ps.c  evl.c  meson.build
